--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Thumbs.db
 node_modules/
 
 # Собранные файлы (допишите самостоятельно)
+public/bundle.js
+public/bundle.js.map
+
+# Конфиг webpack
+webpack.config.js
